<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MainActivity">
    <LinearLayout
        android:background="@drawable/textviewbackground"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:text="@string/Phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/PlainUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:hint="@string/plainphone"
            android:inputType="textPersonName|phone" />
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/textviewbackground"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="257dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:text="@string/password"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/PlainPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_lock_open_24"
            android:ems="10"
            android:hint="@string/passwordplain"
            android:inputType="textPersonName|textPassword"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember login Data "
        app:layout_constraintBottom_toTopOf="@+id/logincard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:id="@+id/remember"
        android:checked="true"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/logincard"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="42dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="121dp"
        app:cardCornerRadius="@dimen/_200sdp"
        app:layout_constraintBottom_toTopOf="@+id/Signupcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C627AAA6"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="#4673CD"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/Signupcard"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="42dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="116dp"
        app:cardCornerRadius="@dimen/_200sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logincard">
        <TextView
            android:id="@+id/Signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C627AAA6"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#4673CD"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>